# auth_system

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/auth_routes/: authenticate.rs  login.rs  logout.rs  mod.rs  register.rs
src/database/: ip_throttling.rs  mod.rs  online_users.rs  users.rs
src/error_handling/: auth.rs
