[package]
name = "auth_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
error-stack = "0.3.0"
dotenv = "0.15.0"
axum = "0.6.1"
axum-extra = { version = "0.7.2", features = ["cookie", "cookie-private"] }
tower-http = { version = "0.4.0", features = ["cors"]}
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid", "postgres-array"] }   
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
argon2 = {version = "0.5.0", features = ["std"]}
rand_core = { version = "0.6", features = ["std"] }
uuid = {version = "1.2.2", features = ["v4"]}
chrono = "0.4.24"
time = "0.3.17"
regex = "1.7.3"
